tests/ui/mutex_atomic.stderr
error: Consider using an AtomicBool instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
 --> $DIR/mutex_atomic.rs:9:5
  |
9 |     Mutex::new(true);
  |     ^^^^^^^^^^^^^^^^
  |
  = note: #[deny(mutex_atomic)] implied by #[deny(clippy)]
note: lint level defined here
 --> $DIR/mutex_atomic.rs:4:9
  |
4 | #![deny(clippy)]
  |         ^^^^^^

error: Consider using an AtomicUsize instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:10:5
   |
10 |     Mutex::new(5usize);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(mutex_atomic)] implied by #[deny(clippy)]

error: Consider using an AtomicIsize instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:11:5
   |
11 |     Mutex::new(9isize);
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(mutex_atomic)] implied by #[deny(clippy)]

error: Consider using an AtomicPtr instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:13:5
   |
13 |     Mutex::new(&x as *const u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(mutex_atomic)] implied by #[deny(clippy)]

error: Consider using an AtomicPtr instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:14:5
   |
14 |     Mutex::new(&mut x as *mut u32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: #[deny(mutex_atomic)] implied by #[deny(clippy)]

error: Consider using an AtomicUsize instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:15:5
   |
15 |     Mutex::new(0u32);
   |     ^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/mutex_atomic.rs:5:9
   |
5  | #![deny(mutex_integer)]
   |         ^^^^^^^^^^^^^

error: Consider using an AtomicIsize instead of a Mutex here. If you just want the locking behaviour and not the internal type, consider using Mutex<()>.
  --> $DIR/mutex_atomic.rs:16:5
   |
16 |     Mutex::new(0i32);
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

